--- a/Ecom-OrderService/src/main/resources/application.properties
+++ b/Ecom-OrderService/src/main/resources/application.properties
@@ -10,7 +10,11 @@ server.port: 9092
 spring.application.name=order-service
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.main.allow-bean-definition-overriding=true
 
 spring.jpa.properties.hibernate.hbm2ddl.auto: update
 
-
+spring.data.mongodb.uri:mongodb://localhost:27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=valli
